Fix tests and adjust http utils to throw exceptions